# triade

./: .env.example  .gitignore  .vercelignore  404.html  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  ruff.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5b8c149e81d9_schema_inicial_completo.py  709b98560540_event_task_link_and_meeting_link.py  8c81b7a1d4a6_google_calendar_integration.py  d67b7ae36546_recurring_tasks.py  d7933f8ac0ef_kanban_column_maps_to_status.py
api/: index.html  index.py
architecture/: index.html
configuration/: index.html
deployment/: index.html
docs/: api.md  architecture.md  configuration.md  deployment.md  er-diagram.md  index.md  installation.md  roadmap.md
docs/user-guide/: agenda.md  auth.md  dashboard.md  kanban.md  organization.md  overview.md  pomodoro.md  settings.md  tasks.md
er-diagram/: index.html
installation/: index.html
roadmap/: index.html
scripts/: supabase_schema.sql  vercel_build.py
search/: search_index.json
src/app/: config.py  database.py  main.py  templating.py
tests/: conftest.py
tests/integration/: test_agenda_pull.py  test_auth_api.py  test_csrf.py  test_dashboard_api.py  test_events_api.py  test_events_api_google_push.py  test_google_calendar_oauth_web.py  test_i18n_web.py  test_kanban_api.py  test_kanban_web.py  test_notes_api.py  test_notes_web.py  test_notifications_api.py  test_notifications_web.py  test_reports_api.py  (+5 more)
(+203 files in other folders)
