[tool.poetry]
name = "triade"
version = "0.1.0"
description = "Sistema de Gestão de Tempo, Agenda, Planejamento e Produtividade"
authors = ["Triade Team"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = { extras = ["email"], version = "^2.9.2" }
pydantic-settings = "^2.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
httpx = "^0.27.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
asyncpg = ">=0.31.0,<1.0.0"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
slowapi = "^0.1.9"
itsdangerous = "^2.2.0"
markdown = "^3.7"
bleach = "^6.1.0"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
respx = "^0.21.1"
mkdocs-material = "^9.5.44"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
